# hw_28

./: manage.py  pyproject.toml  pytest.ini
ads/: models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
ads/fixtures/: ads.json  categories.json  csv_to_json.py  locations.json
ads/management/commands/: load_ads_fixtures.py
ads/migrations/: 0001_initial.py  0002_alter_ad_image_alter_ad_name_alter_ad_price.py  0002_alter_user_last_name.py  0003_alter_ad_options_alter_category_options_and_more.py  0004_alter_ad_options_alter_category_options_and_more.py  0005_remove_user_location_alter_ad_author_delete_location_and_more.py  0006_alter_category_name.py  0007_alter_ad_author_alter_ad_category_and_more.py  0008_selection.py
ads/urls/: ad_urls.py  category_urls.py  selection_urls.py
hw_28/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  fixtures.py
tests/ads/: ad_create_test.py  ad_detail_test.py  ads_list_test.py  selection_create_test.py
users/: models.py  serializers.py  urls.py  validators.py  views.py
users/fixtures/: locations.json  users.json
users/management/commands/: load_users_fixtures.py
users/migrations/: 0001_initial.py  0002_alter_user_birth_date_alter_user_email.py  0002_alter_user_options.py  0003_alter_user_managers_user_date_joined_user_email_and_more.py  0004_alter_user_age_alter_user_sex.py  0005_alter_user_sex.py  0006_alter_user_location.py
